# mini-redis

./: .gitignore  Cargo.toml  README.md  cliff.toml
docs/: list_commands.md
src/: errors.rs  lib.rs  main.rs  value.rs
src/cli/: main.rs
src/client/: main.rs
src/command/: generic.rs  hash.rs  list.rs  mod.rs  set.rs  sorted_set.rs  string.rs
src/persistence/: rdb.rs
src/protocol/: decoder.rs  encoder.rs  hash.rs  list.rs  mod.rs  set.rs
src/server/: mod.rs
src/storage/: mem.rs  mod.rs  set.rs  sorted_set.rs
src/value/: hash.rs  list.rs  mod.rs  set.rs  sorted_set.rs
