[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
dashmap = "6.1.0"
futures = "0.3.32"
glob = "0.3.3"
ordered-float = "5.3.0"
redis-protocol = {version = "6.0.0", features = ["codec"]}
skiplist = "1.1.0"
smallvec = "1.15.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"


[[bin]]
name="client"
path="src/client/main.rs"
